# sic

./: .gitattributes  CMakeLists.txt  README.md  bucket_allocator.h  component.cpp  component.h  component_storage_handle.h  component_view.h  defines.h  entity.h  event.h  impuls.cpp  main.cpp  object.h  pch.h  policy.cpp  policy.h  scheduler.cpp  scheduler.h  stdafx.h  system.h  system_base.h  thread_naming.h  threadpool.cpp  threadpool.h  vulkan_renderer_system.cpp  vulkan_renderer_system.h  world.cpp  world.h
content/engine/materials/: default_ui.frag  default_ui.vert  default_ui_border_instanced.frag  (+10 more)
content/fonts/: test_font.asset  test_font.asset_h
content/materials/: material - Copy.frag  material - Copy.vert  material.frag  material.fs  material.vert  material.vs  material_instanced.frag  material_instanced.vert  material_translucent.frag  material_translucent_instanced.frag  material_ui_background.frag  material_ui_circle_instanced.frag  material_ui_test.frag  material_ui_test_instanced.frag  pass_through.vert  pass_through.vs  simple_line.vert  simple_texture.frag  simple_texture.fs
content/models/: Cube.fbx  Nanasuit.fbx  Nanasuit_big.fbx  Sphere.fbx  crysis.asset  crysis.asset_h  model_crysis.asset  model_crysis.asset_h  sm_sphere.fbx
include/: shape.h  shape_controller_system.h  shape_renderer_system.h
libraries/impuls/: CMakeLists.txt
libraries/impuls/include/impuls/: asset.h  asset_management.h  asset_material.h  asset_mesh.h  asset_model.h  asset_texture.h  asset_types.h  bucket_allocator.h  bucket_allocator_view.h  component.h  component_transform.h  component_view.h  defines.h  delegate.h  double_buffer.h  engine.h  engine_context.h  event.h  file_management.h  input.h  leavable_queue.h  level.h  level_context.h  logger.h  object.h  object_base.h  pch.h  render_object_list.h  scheduler.h  serializer.h  snapshot.h  state_render_scene.h  system.h  system_asset.h  system_editor_view_controller.h  system_file.h  system_input.h  system_model.h  system_renderer.h  system_renderer_state_swapper.h  (+12 more)
libraries/impuls/libraries/crossguid-master/include/crossguid/: guid.hpp
libraries/impuls/libraries/plf_colony/: CMakeLists.txt
libraries/impuls/libraries/plf_colony/include/plf_colony/: plf_colony.h  plf_colony_test_suite.cpp
libraries/impuls/src/: asset.cpp  asset_management.cpp  asset_material.cpp  asset_mesh.cpp  asset_model.cpp  asset_texture.cpp  component.cpp  component_transform.cpp  component_view.cpp  engine.cpp  engine_context.cpp  file_management.cpp  input.cpp  level.cpp  level_context.cpp  logger.cpp  pch.cpp  scheduler.cpp  state_render_scene.cpp  system.cpp  system_asset.cpp  system_editor_view_controller.cpp  system_file.cpp  system_input.cpp  system_model.cpp  system_renderer.cpp  system_renderer_state_swapper.cpp  system_view.cpp  system_window.cpp  threadpool.cpp  world.cpp  world_context.cpp
libraries/sic/: CMakeLists.txt
libraries/sic/include/sic/: asset.h  asset_font.h  asset_material.h  asset_model.h  asset_texture.h  asset_types.h  bucket_allocator.h  color.h  component.h  component_transform.h  component_view.h  debug_draw_helpers.h  defines.h  delegate.h  easing.h  engine.h  engine_context.h  event.h  file_management.h  gl_includes.h  input.h  leavable_queue.h  level.h  level_context.h  logger.h  material_dynamic_parameters.h  material_parser.h  object.h  object_base.h  opengl_buffer.h  opengl_draw_interface_debug_lines.h  opengl_draw_interface_instanced.h  opengl_draw_strategies.h  opengl_engine_uniform_blocks.h  opengl_program.h  opengl_render_target.h  opengl_texture.h  opengl_uniform_block.h  opengl_vertex_attributes.h  opengl_vertex_buffer_array.h  (+27 more)
libraries/sic/libraries/msdf-atlas-gen-master/: CMakeLists.txt
libraries/sic/libraries/msdfgen-master/core/: SignedDistance.cpp  SignedDistance.h  contour-combiners.cpp
libraries/sic/libraries/msdfgen-master/ext/: import-font.cpp
libraries/sic/src/: asset.cpp  asset_font.cpp  asset_material.cpp  asset_model.cpp  asset_texture.cpp  component.cpp  component_transform.cpp  component_view.cpp  debug_draw_helpers.cpp  engine.cpp  engine_context.cpp  file_management.cpp  input.cpp  level.cpp  level_context.cpp  logger.cpp  material_dynamic_parameters.cpp  material_parser.cpp  opengl_draw_interface_debug_lines.cpp  opengl_draw_interface_instanced.cpp  opengl_program.cpp  opengl_render_target.cpp  opengl_texture.cpp  pch.cpp  render_target.cpp  renderer_shape_draw_functions.cpp  serializer.cpp  shader_parser.cpp  state_render_scene.cpp  system.cpp  system_asset.cpp  system_editor_view_controller.cpp  system_file.cpp  system_input.cpp  system_model.cpp  system_renderer.cpp  system_renderer_state_swapper.cpp  system_transform.cpp  system_ui.cpp  system_view.cpp  (+5 more)
libraries/sic_core/: CMakeLists.txt  count_lines.bat
libraries/sic_core/include/sic/core/: async_result.h  bucket_allocator_view.h  colony.h  component.h  defines.h  delegate.h  double_buffer.h  engine.h  engine_context.h  engine_job_scheduling.h  event.h  leavable_queue.h  level.h  level_context.h  logger.h  magic_enum.h  object.h  object_base.h  random.h  scene.h  scene_context.h  serializer.h  system.h  temporary_string.h  thread_context.h  threadpool.h  type.h  type_index.h  update_list.h  weak_ref.h
libraries/sic_core/src/: async_result.cpp  component.cpp  engine.cpp  engine_context.cpp  engine_job_scheduling.cpp  level.cpp  level_context.cpp  logger.cpp  random.cpp  scene.cpp  scene_context.cpp  serializer.cpp  system.cpp  temporary_string.cpp  thread_context.cpp  thread_temporary_storage_instance.cpp  threadpool.cpp
libraries/sic_editor/: CMakeLists.txt
libraries/sic_editor/include/sic/editor/: editor_ui_common.h  system_editor.h
libraries/sic_editor/include/sic_editor/: asset_import.h
libraries/sic_editor/libraries/msdf-atlas-gen-master/: msdf-atlas-gen.vcxproj
libraries/sic_editor/libraries/msdf-atlas-gen-master/msdf-atlas-gen/: GlyphGeometry.h
libraries/sic_editor/src/: asset_import.cpp  editor_ui_common.cpp  system_editor.cpp
src/: main.cpp  shape_controller_system.cpp  shape_renderer_system.cpp
(+104 files in other folders)
